feat(auth-api-swagger): documented
